fixed layout issues

--- a/components/core/content/Contents.module.scss
+++ b/components/core/content/Contents.module.scss
@@ -8,6 +8,8 @@
     overflow-y: auto;
     overflow-x: hidden;
 
+    width: 100%;
+    // height: 100%;
 
     justify-content: center;
     align-items: center;
